# vane-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build.sh  uniffi.toml
VaneKt/src/main/java/com/inteniquetic/vane/: Vane.kt  VaneClient.kt
VaneSwift/: Makefile  Package.swift  README.md
VaneSwift/RustFramework.xcframework/: Info.plist
VaneSwift/RustFramework.xcframework/macos-arm64_x86_64/headers/RustFramework/: module.modulemap  vaneFFI.h
VaneSwift/Sources/VaneSwift/: VaneClient+Extension.swift  VaneClient.swift  VaneFFI.h  VaneFFI.modulemap  VaneSwift.swift
VaneSwift/Tests/VaneSwiftTests/: VaneSwiftTests.swift
src/: lib.rs  vane.udl
vane-bindgen/: Cargo.toml  generate.sh  uniffi.toml
vane-bindgen/src/: vane.udl
