[package]
name = "vane"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uniffi = {version = "0.29", default-features = false}
url = "2.4"
thiserror = "2.0.12"

[lib]
crate-type = [
    "cdylib",  # android
    # "staticlib", # ios
    "lib"
]
name = "vane"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
incremental = false
debug = false
overflow-checks = false
